2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  bitwarden-deployment
  namespace: bitwarden
  labels:
    app:  bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  bitwarden
    spec:
      containers:
      - name:  bitwarden
        image: vaultwarden/server:1.29.2
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        ports:
          - name:  bitwarden
            containerPort:  80
        volumeMounts:
          - name: nfs
            mountPath: /data/
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: bitwarden-pvc

---
