3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  bitwarden-deployment
  namespace: bitwarden
  labels:
    app:  bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden
  replicas: 1
  template:
    metadata:
      labels:
        app:  bitwarden
    spec:
      containers:
      - name:  web
        image: vaultwarden/server:1.29.2
        ports:
          - name:  bitwarden
            containerPort:  80
        volumeMounts:
          - name: data
            mountPath: /data/
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bitwarden-pvc
---
