5-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-srv
  namespace: bitwarden
spec:
  selector:
    app: bitwarden
  ports:
    - name: http
      targetPort: 80 
      port: 80
