4-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nzdev-org-ingres
  namespace: nzdev-org
  annotations:
    kubernetes.io/ingress.class: traefik-external
    link.argocd.argoproj.io/external-link: 'https://vault.nzdev.org/'
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`vault.nzdev.org`)
      kind: Rule
      services:
        - name: bitwarden-srv
          port: 80
  tls:
